<resources>
    <string name="app_name">Pacijent monitor - Master rad</string>
    <string name="title_activity_add_course">AddCourseActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="elektrokardiogram_ekg">Elektrokardiogram (EKG)</string>
    <string name="sve_vrijednosti">Prikazi sva mjerenja</string>
    <string name="vrijednostMjerenjaEKG">0 bpm</string>
    <string name="vrijednostMjerenjaTemp">26.5 °C</string>
    <string name="ime_i_prezime_pacijenta">Ime i prezime pacijenta</string>
    <string name="internet_status">Status: Spojen na mrezu!</string>
    <string name="thermometar">Tjelesna temperatura</string>
</resources>